<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Smart Shopper</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">This is just for testing or we can say it is just for the demo of the app</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>

    <array name="testing">
        <item>Select Username</item>
        <item>Shyam</item>
        <item>kishore</item>
        <item>mukesh</item>
        <item>Ram</item>
        <item>Ram</item>
        <item>Ram</item>
    </array>
    <array name="year">
        <item>Select Year</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>

    </array>
    <array name="type">
        <item>Select Type</item>
        <item>All</item>
        <item>Unique</item>


    </array>
    <string name="called">Called\n and\nTalked</string>
    <string name="callednottalk">Called but\n not \nTalked</string>
    <string name="mailsent">Mail\nSent</string>
    <string name="mailreceived">Mail\nReceived</string>
    <string name="message">Message</string>
    <string name="other">Other</string>
    <string name="total">Total</string>


</resources>
