<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorred"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorgrey"
        android:weightSum="80">
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="Time"
        android:textSize="10sp"
        android:textColor="@color/Color_white"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/called"
        android:textSize="10sp"
        android:textColor="@color/Color_white"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>

    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/callednottalk"
        android:textColor="@color/Color_white"
        android:textSize="10sp"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>

    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/mailsent"
        android:textColor="@color/Color_white"
        android:textSize="10sp"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/mailreceived"
        android:textColor="@color/Color_white"
        android:textSize="9sp"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/Color_white"
        android:textSize="9sp"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textSize="10sp"
        android:textColor="@color/Color_white"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/total"
        android:textColor="@color/Color_white"
        android:layout_weight="9.8"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorred"
            android:layout_weight="0.2"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorred"/>

</LinearLayout>


</LinearLayout>